--- a/buyOne.css
+++ b/buyOne.css
@@ -679,6 +679,89 @@ a::after {
     cursor: pointer;
 }
 
+.policy {
+    margin: 5% 10% 0 10%
+}
+
+.pr-hr {
+    width: 75%;
+    margin-top: -1%;
+}
+
+.pr-head {
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 40px;
+    text-align: center;
+    color: #1A1A1A;
+}
+
+.pr-cont {
+    width: 82%;
+    text-align: left;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    color: #1A1A1A;
+    margin: .8% 0 .8% 0;
+}
+
+.pr-cont2 {
+    width: 82%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+}
+
+.pr-cont3 {
+    width: 75%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+}
+
+.cont4 {
+    margin: -1.3% 0 .5% 0;
+}
+
+.pr-cont5 {
+    width: 75%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+    padding: 0.4% 0 0.5% 0;
+
+}
+
+.ft-lnk {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 16px;
+    cursor: pointer;
+    padding: 0 0 0 5px;
+    color: black;
+}
+
+.ft-lnk2 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 16px;
+    padding: 0 0 0 5px;
+    color: black;
+}
+
+
+
+
+
+
+
 
 
 
@@ -1448,6 +1531,14 @@ a::after {
         cursor: pointer;
     }
 
+    .ft-lnk {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+        cursor: pointer;
+        padding: 0 0 0 5px;
+        color: black;
+    }
 
 
 
@@ -1590,5 +1681,13 @@ a::after {
         margin: 5px 0 0 1rem !important;
     }
 
+    .ft-lnk {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+        cursor: pointer;
+        padding: 0 0 0 5px;
+        color: black;
+    }
 
 }
