--- a/mainIndex.css
+++ b/mainIndex.css
@@ -809,6 +809,160 @@ a:active {
     cursor: pointer;
 }
 
+.policy {
+    margin: 5% 10% 0 10%
+}
+
+.pr-hr {
+    width: 75%;
+    margin: -1% -1% 0 0;
+}
+
+.pr-head {
+    font-weight: 400;
+    font-size: 27px;
+    line-height: 40px;
+    text-align: center;
+    color: #1A1A1A;
+}
+
+.pr-cont {
+    width: 82%;
+    text-align: left;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    color: #1A1A1A;
+    margin: .8% 0 .8% 0;
+}
+
+.pr-cont2 {
+    width: 82%;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+}
+
+.pr-cont3 {
+    width: 75%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+}
+
+.cont4 {
+    margin: -1.3% 0 .5% 0;
+}
+
+.pr-cont5 {
+    width: 75%;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1A1A1A;
+    text-align: left;
+    padding: 0.4% 0 0.5% 0;
+
+}
+
+.ft-lnk {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 16px;
+    cursor: pointer;
+    padding: 0 0 0 5px;
+    color: black;
+}
+
+.ft-lnk2 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 16px;
+    padding: 0 0 0 5px;
+    color: black;
+}
+
+.pr-cont-tr {
+    font-weight: 600;
+    font-size: 19px;
+    line-height: 24px;
+    width: 82%;
+    text-align: left;
+    color: #1A1A1A;
+    margin: .5% 0 .5% 0;
+}
+
+.pr-cont-sh {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+    width: 82%;
+    text-align: left;
+    color: #1A1A1A;
+    margin: .5% 0 .5% 0;
+}
+
+.navbart {
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    box-shadow: 0px 5px 3px -5px rgb(100, 100, 100);
+    background-color: white;
+    opacity: 0.92;
+    z-index: 200;
+    padding-top: 5px;
+}
+
+.navbart a {
+    float: left;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+}
+
+.nlogot {
+    height: 2rem;
+    width: auto;
+}
+
+.hasht {
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 600;
+    margin: 0 46.5% 0 19%;
+}
+
+.buy-btnt {
+    font-family: Roboto;
+    font-size: 19px;
+    border: none;
+    margin: 16px 0 0 0;
+    background-color: white;
+    border-radius: 16px;
+    color: #DB3022;
+    padding: 3px 15px 3px 15px;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1944,6 +2098,130 @@ a:active {
         display: none;
     }
 
+    .policy {
+        margin: 12% 0% 0 0%;
+    }
+
+    .pr-head {
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 23px;
+        text-align: center;
+        color: #1A1A1A;
+    }
+
+    .hasht {
+        color: rgb(0, 0, 0);
+        text-align: center;
+        padding: 6px 16px;
+        text-decoration: none;
+        font-family: Roboto;
+        font-size: 25px;
+        font-weight: 600;
+        margin: 0 35% 0 1%;
+    }
+
+    .buy-btnt {
+        font-family: Roboto;
+        font-size: 18px;
+        border: none;
+        margin: 1px 0 0 32%;
+        /* background-color: red; */
+        border-radius: 18px;
+        color: red;
+        padding: 8px 20px 8px 20px;
+        cursor: pointer;
+    }
+
+    .nlogot {
+        height: 1.8rem;
+        width: auto;
+    }
+
+    .pr-cont {
+        width: 82%;
+        text-align: left;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 30px;
+        color: #1A1A1A;
+        margin: .8% 0 .8% 0;
+    }
+
+    .pr-cont2 {
+        width: 82%;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #1A1A1A;
+        text-align: left;
+    }
+
+    .pr-cont3 {
+        width: 75%;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #1A1A1A;
+        text-align: left;
+    }
+
+    .pr-cont5 {
+        width: 75%;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #1A1A1A;
+        text-align: left;
+        padding: 0.4% 0 0.5% 0;
+    }
+
+    .ft-lnk {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+        cursor: pointer;
+        padding: 0 0 0 5px;
+        color: black;
+    }
+
+    .pr-cont-tr {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        width: 82%;
+        text-align: left;
+        color: #1A1A1A;
+        margin: .5% 0 .5% 0;
+    }
+
+    .pr-cont-sh {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 20px;
+        width: 82%;
+        text-align: left;
+        color: #1A1A1A;
+        margin: .5% 0 .5% 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1967,8 +2245,25 @@ a:active {
         margin: 0 30% 0 1%;
     }
 
+    .hasht {
+        color: rgb(0, 0, 0);
+        text-align: center;
+        padding: 6px 16px;
+        text-decoration: none;
+        font-family: Roboto;
+        font-size: 25px;
+        font-weight: 600;
+        margin: 0 35% 0 1%;
+    }
 
-
+    .ft-lnk {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 16px;
+        cursor: pointer;
+        padding: 0 0 0 5px;
+        color: black;
+    }
 
 
 
