--- a/mainIndex1.css
+++ b/mainIndex1.css
@@ -357,7 +357,7 @@ a:active {
 
 .h5-col1 {
     width: 22%;
-    padding-left: 15%;
+    padding-left: 12%;
 }
 
 .h5-col1 img {
@@ -370,7 +370,7 @@ a:active {
 }
 
 .h5-col3 img {
-    width: 100%;
+    width: auto;
     height: 630px;
 }
 
